# mini-pgw

./: .gitignore  CMakeLists.txt  LoggerTypes.h  README.md
Client/: CMakeLists.txt  cfg.json  main.cpp
Client/include/: Client.h  Config.h
Client/src/: Client.cpp  Config.cpp
IConfig/: CMakeLists.txt
IConfig/include/: IConfig.h
IConfig/src/: IConfig.cpp
IRepository/: CMakeLists.txt
IRepository/include/: IRepository.h
IRepository/src/: IRepository.cpp
Identifier/: CMakeLists.txt
Identifier/include/: IIdentifier.h  Identifier.h
Identifier/src/: Identifier.cpp
Server/: CMakeLists.txt  cfg.json  main.cpp
Server/include/: Config.h  HttpServer.h  IRepository.h  Repository.h  ServerLauncher.h  Service.h  UdpServer.h
Server/src/: Config.cpp  HttpServer.cpp  Repository.cpp  ServerLauncher.cpp  Service.cpp  UdpServer.cpp
tests/: CMakeLists.txt  MockIdentifier.h  MockRepository.h  identifier_tests.cpp  repository_tests.cpp
